v1.5.51 :egg: Something nice if you save the site on your home app on Iphone. :truck: Rename the Matte Painting project. :bug: Some corrections in the css but between the date of the modifications and this commit I forgot what kind of modifications.

--- a/styles/all_projects/all_projects.scss
+++ b/styles/all_projects/all_projects.scss
@@ -134,6 +134,7 @@ body
                 {
                     width: 100%;
                     height: 100%;
+                    margin-bottom: 80px;
                 }
                 .more-soon_text
                 {
