--- a/styles/project/project.scss
+++ b/styles/project/project.scss
@@ -259,6 +259,7 @@ body
                 p 
                 {
                     @include Flex-Center-Center;
+                    text-align: center;
                     color: var(--Primary-White);
                     font-size: 49px;
                     font-weight: 800;
@@ -269,14 +270,12 @@ body
             .main_project-description_picture_full_width
             {
                 width: 100vw;
-                height: fit-content;
                 margin-top: 120px;
                 display: flex;
                 justify-content: center; 
                 .description_picture_full_width
                 {
                     width: 100%;
-                    height: auto;
                     box-shadow: var(--Pictures-Project-Shadow);
                 }
             }
@@ -410,7 +409,6 @@ body
                 .main_project-description_picture_full_width
                 {
                     width: 150vw;
-                    height: auto;
                 }
             }
         }
